# pg-backloggd

./: .gitignore  README.md  igdb-fetcher.py  pyproject.toml  requirements.txt  spider-scraper.py  sqliter.py
